fixing weird rendering on ios

--- a/src/components/AttendPage/attendheader.scss
+++ b/src/components/AttendPage/attendheader.scss
@@ -1,4 +1,5 @@
 .attend-button {
+  -webkit-appearance: none;
   font-size: 25px;
   color: rgb(255, 255, 255);
   text-decoration: none;
